fix: Add published date property on linked article targets - EXO-76039 - Meeds-io/meeds#2700 (#354)
Add published date property on linked article targets